partner logos added

--- a/index.html
+++ b/index.html
@@ -171,6 +171,21 @@
             <button class="btn btn-lg btn-primary" onclick="location.href='https://chat.openai.com/g/g-v8Nx22SBr-hate-speech-detector'">Check for Harmony</button>
         </div>
     </div>
+
+    <div class="container">
+        <h2 class="text-center"></h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="images/ydflogo.jpg" alt="YDF" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+                <img src="images/Coat_of_arms_of_Punjab.svg.png" alt="gop" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+                <img src="images/cfp.png" alt="cfp" class="img-fluid">
+            </div>
+        </div>
+    </div>
     
 </div>
 
