partner logos moved to footer and bg is now transparent for the logos.

--- a/index.html
+++ b/index.html
@@ -171,25 +171,23 @@
             <button class="btn btn-lg btn-primary" onclick="location.href='https://chat.openai.com/g/g-v8Nx22SBr-hate-speech-detector'">Check for Harmony</button>
         </div>
     </div>
-
-    <div class="container">
-        <h2 class="text-center"></h2>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="images/ydflogo.jpg" alt="YDF" class="img-fluid">
-            </div>
-            <div class="col-md-4">
-                <img src="images/Coat_of_arms_of_Punjab.svg.png" alt="gop" class="img-fluid">
-            </div>
-            <div class="col-md-4">
-                <img src="images/cfp.png" alt="cfp" class="img-fluid">
-            </div>
-        </div>
-    </div>
-    
 </div>
 
 <div class="footer">
+    <div class="container pt-3">
+        <h2 class="text-center"></h2>
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <img src="images/ydflogo.jpg" alt="YDF" class="img-fluid" width="100" style="mix-blend-mode: multiply;" loading="lazy">
+            </div>
+            <div class="col-auto">
+                <img src="images/Coat_of_arms_of_Punjab.svg.png" alt="gop" class="img-fluid" width="100" style="mix-blend-mode: multiply;" loading="lazy">
+            </div>
+            <div class="col-auto">
+                <img src="images/cfp.png" alt="cfp" class="img-fluid" width="80" style="mix-blend-mode: multiply;" loading="lazy">
+            </div>
+        </div>
+    </div>
     <div class="container">
         <p>Harmony Checker is collaboration project between <a href="https://ydfpk.org/"YDF>Youth Development Foundation</a> and <a href="https://codeforpakistan.org">Code For Pakistan</a> ❤️</p>
     </div>
